--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Version: 0.5  </p>
 
-<h4>REST service for Mozilla Metrics. This service currently uses Hazelcast's distributed in-memory map. The maps can be automatically persisted (Push model) using Hazelcast's persistence classes to persist the map data to various data sinks. We also now provide some consumer implementations to pull data from the maps (Push/Pull model i.e. Pub/Sub).</h4>
+<h4>REST service for Mozilla Metrics. This service currently uses Hazelcast's distributed in-memory map. The maps can be automatically persisted (Push model) using Hazelcast's persistence classes to persist the map data to various data sinks. We also now provide some consumer implementations to pull data from the maps (Push/Pull model).</h4>
 
 <h3>Version Compatability</h3>
 
